[workspace]
members = [
    "crates/backend/",
    "crates/frontend/",
    "crates/edb/",
    "crates/foundry-adapter/",
    "crates/hardhat-adapter/",
    "crates/utils/",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.79"
authors = ["The MEDGA Team"]
license = "MIT OR Apache-2.0"
homepage = "https://medga.org/"
repository = "https://github.com/MedGa-eth/EDB"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
debug = true

# Local "release" mode, more optimized than dev but much faster to compile than release.
[profile.local]
inherits = "dev"
opt-level = 1
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "local"
debug = true
strip = "none"
panic = "unwind"

# Optimized release profile.
[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "fat"
strip = "debuginfo"
panic = "abort"
codegen-units = 1


[workspace.dependencies]
edb = { path = "crates/edb" }
edb-backend = { path = "crates/backend" }
edb-frontend = { path = "crates/frontend" }
edb-foundry-adapter = { path = "crates/foundry-adapter" }
edb-hardhat-adapter = { path = "crates/hardhat-adapter" }
edb-utils = { path = "crates/utils" }

# foundry
foundry-block-explorers = { version = "0.5.0", default-features = false }
foundry-compilers = { version = "0.9.0", default-features = false }
foundry-fork-db = "0.1"
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "0dceb53" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0dceb53" }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "0dceb53" }
solang-parser = "=0.3.3"

## revm
# no default features to avoid c-kzg
revm = { version = "10.0.0", default-features = false }
revm-primitives = { version = "5.0.0", default-features = false }
revm-inspectors = { version = "0.3", features = ["serde"] }

## ethers
ethers-contract-abigen = { version = "2.0.14", default-features = false }

## alloy
alloy-consensus = { version = "0.1.2", default-features = false }
alloy-contract = { version = "0.1.2", default-features = false }
alloy-eips = { version = "0.1.2", default-features = false }
alloy-genesis = { version = "0.1.2", default-features = false }
alloy-json-rpc = { version = "0.1.2", default-features = false }
alloy-network = { version = "0.1.2", default-features = false }
alloy-node-bindings = { version = "0.1.2", default-features = false }
alloy-provider = { version = "0.1.2", default-features = false }
alloy-pubsub = { version = "0.1.2", default-features = false }
alloy-rpc-client = { version = "0.1.2", default-features = false }
alloy-rpc-types = { version = "0.1.2", default-features = false }
alloy-serde = { version = "0.1.2", default-features = false }
alloy-signer = { version = "0.1.2", default-features = false }
alloy-signer-aws = { version = "0.1.2", default-features = false }
alloy-signer-gcp = { version = "0.1.2", default-features = false }
alloy-signer-ledger = { version = "0.1.2", default-features = false }
alloy-signer-local = { version = "0.1.2", default-features = false }
alloy-signer-trezor = { version = "0.1.2", default-features = false }
alloy-transport = { version = "0.1.2", default-features = false }
alloy-transport-http = { version = "0.1.2", default-features = false }
alloy-transport-ipc = { version = "0.1.2", default-features = false }
alloy-transport-ws = { version = "0.1.2", default-features = false }

alloy-dyn-abi = "0.7.3"
alloy-json-abi = "0.7.3"
alloy-primitives = { version = "0.7.3", features = ["getrandom", "rand"] }
alloy-sol-macro-expander = "0.7.3"
alloy-sol-macro-input = "0.7.3"
alloy-sol-types = "0.7.3"
syn-solidity = "0.7.3"

alloy-chains = "0.1"
alloy-rlp = "0.3.3"
alloy-trie = "0.4.1"


## misc
arrayvec = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"
color-eyre = "0.6"
crossterm = "0.27"
evm-disassembler = "0.5"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
indicatif = "0.17"
itertools = "0.13"
paste = "1.0"
rand = "0.8"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serial_test = "3.0.0"
strum = "0.26"
toml = "0.8"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
tempfile = "3.10"
tokio = "1"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
tui-textarea = { version = "0.4", features = ["search"] }
vergen = { version = "8", default-features = false }
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }

# soldeer
soldeer = "0.2.17"

[patch.crates-io]
foundry-compilers = { git = "https://github.com/ZhangZhuoSJTU/compilers.git" }
