[package]
name = "edb-backend"
description = "EDB's backend providing comprehensive debugging functionalities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dev-dependencies]
serial_test.workspace = true

[dependencies]
edb-utils.workspace = true

alloy-chains.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
arrayvec.workspace = true
eyre.workspace = true
hex.workspace = true
indicatif.workspace = true
foundry-compilers = { workspace = true, features = ["svm-solc", "async"] }
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
revm.workspace = true
revm-inspectors.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
solang-parser.workspace = true
tracing.workspace = true
tokio.workspace = true