[package]
name = "edb-debug-layer"
description = "EDB's core layer providing comprehensive debugging functionalities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true
