[package]
name = "edb"
description = "EDB: The EVM Project Debugger"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "edb"
path = "bin/main.rs"

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
] }

[dev-dependencies]
serial_test.workspace = true

[dependencies]
edb-backend.workspace = true
edb-frontend.workspace = true
edb-utils.workspace = true

alloy-chains = { workspace = true, features = ["serde"] }
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
anvil.workspace = true
clap = { workspace = true, features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
color-eyre.workspace = true
eyre.workspace = true
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
foundry-common.workspace = true
foundry-evm.workspace = true
foundry-fork-db.workspace = true
indicatif.workspace = true
once_cell.workspace = true
rand.workspace = true
revm.workspace = true
serde.workspace = true
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "fmt"] }
yansi.workspace = true
