[package]
name = "edb-etherscan-adapter"
description = "EDB's adapter for etherscan"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true
