[package]
name = "edb-frontend"
description = "Frontend UI for EDB debugger"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
edb-backend.workspace = true

alloy-primitives.workspace = true
alloy-chains.workspace = true
alloy-sol-types.workspace = true
arrayvec.workspace = true
crossterm.workspace = true
eyre.workspace = true
hex.workspace = true
foundry-compilers.workspace = true
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
revm.workspace = true
revm-inspectors.workspace = true
rustc-hash.workspace = true
serde.workspace = true
ratatui.workspace = true
tracing.workspace = true
tui-textarea.workspace = true