[package]
name = "edb-utils"
description = "Utilities for working with the EDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-chains = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
anvil.workspace = true
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"
color-eyre.workspace = true
dirs-next = "2"
eyre.workspace = true
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
foundry-common.workspace =  true
foundry-evm.workspace =  true
revm = { workspace = true, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "optimism",
    "c-kzg",
] }
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "fmt"] }