[package]
name = "edb-utils"
description = "Utilities for working with the EDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[dependencies]
auto_impl.workspace = true
alloy-chains.workspace = true
alloy-json-abi.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs-next = "2"
eyre.workspace = true
foundry-compilers = { workspace = true, features = ["svm-solc", "async"] }
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "fmt"] }